<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">LOGIN</string>
    <string name="label_username">username</string>
    <string name="label_password">password</string>
    <string name="hint_username">Your username</string>
    <string name="hint_password">Your password</string>
    <string name="btn_login">Login</string>
    <string name="description_b002">Kotlin</string>
    <string name="title_signin_003">Sign In</string>
    <string name="label_input_emailaddress_003">Email Address</string>
    <string name="hint_input_emailaddress_003">Your email</string>
    <string name="label_input_password_003">Password</string>
    <string name="hint_input_password_003">Your password</string>
    <string name="checkbox_remember_003">Remember me</string>
    <string name="btn_submit_003">Submit</string>
    <string name="txt_requestaccess_003"><u>Can\'t access your account</u></string>
</resources>